--- a/block-BRaabk/code/food-menu/src/stylesheets/style.css
+++ b/block-BRaabk/code/food-menu/src/stylesheets/style.css
@@ -57,84 +57,86 @@ table {
   --bg: rgb(242,251,255);
 }
 /* my styles */
-html {
-  font-size: 16px;
-}
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body {
-  font-family: "Raleway", sans-serif;
-  line-height: 1.5;
-}
-main {
-  background-color: var(--secondary);
-}
-/* container */
-.container {
-  max-width: 1370px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 2rem;
-}
-/* flex{*/
-.flex {
-  display: flex;
-}
-.jcb{
-    justify-content: space-between;
-}
-.aic{
-    align-items: center;
-}
-.wrap{
-    flex-wrap: wrap;
-}
-.flex-20{
-    flex: 0 0 18%;
-}
-.flex-30{
-    flex: 0 0 28%;
-}
-.center{
+h1 {
+    font-size: 2rem;
     text-align: center;
-}
-/* general */
-.title{
-    font-size: 2.5rem;
-    color: var(--text-dark);
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 0.2rem;
-    margin: 2rem;
-    text-decoration: underline;
-    text-decoration-color: var(--primary);
-}
-.filter-btn{
-    background-color: var(--secondary);
+    margin-top: 1rem;
+    font-style: italic;
+    font-weight: bold;
+  }
+  .header {
+    display: flex;
+    justify-content: center;
+  }
+  
+  button {
     color: var(--primary);
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    border: none;
+    padding: 5px;
+    margin-right: 10px;
+    font-size: 1.2rem;
     cursor: pointer;
-}
-.active{
+    border: none;
+  }
+  
+  button:hover {
     background-color: var(--primary);
-    color: var(--secondary);
-    border: 1px solid var(--primary);
-}
-.cards{
-    max-width: 400px;
+    border-radius: 5px;
+    color: var(--bg);
+  }
+  .active {
+    border-radius: 5px;
+    border: 1px solid var(--primary)
+  }
+  
+  .container {
+    max-width: 1300px;
     width: 100%;
-    margin-left:1rem
-}
-.cards img{
+    margin: 0 auto;
+    background-color: var(--bg);
+  }
+  
+  .main {
+    display: flex;
+  }
+  
+  h4 {
+    font-size: 1.3rem;
+    text-transform: capitalize;
+    font-weight: bold;
+    font-style: italic;
+    margin-bottom: 0.6rem;
+  }
+  .all-article {
+    margin: 1rem;
     width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border:2px solid var(--primary);
-    border-radius: 10px;
-}
+    display: flex;
+    flex-wrap: wrap;
+  }
+  article {
+    margin-left: 2.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    width: 45%;
+    display: flex;
+  }
+  img {
+    width: 300px;
+    height: 200px;
+    border: 4px solid var(--primary);
+  }
+  
+  .product-title {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px dashed red;
+    margin-bottom: 1rem;
+  }
+  
+  .product-box {
+    margin-left: 1rem;
+  }
+  p {
+    line-height: 1.5;
+    font-weight: 400;
+  }
