--- a/block-BRaabw/code/my_shopping_cart/src/Stylesheets/style.css
+++ b/block-BRaabw/code/my_shopping_cart/src/Stylesheets/style.css
@@ -154,13 +154,6 @@ html {
 *::after {
   box-sizing: border-box;
 }
-
-body {
-  font-family: "Roboto", sans-serif;
-  line-height: 1.5;
-  margin: 0;
-}
-
 /* GENERAL STYLE */
 body {
   line-height: 1.5;
@@ -192,7 +185,15 @@ body {
   margin: 0 auto;
   padding: 0 2rem;
 }
-
+.heading{
+  text-align: center;
+  font-size: 2rem;
+  margin: 1.5rem;
+  font-weight: 600;
+}
+.heading:hover{
+  color: var(--primary);
+}
 .aside {
   width: 20%;
   padding: 1rem;
