--- a/block-BRaabm/code/movie-list/src/Stylesheets/styles.css
+++ b/block-BRaabm/code/movie-list/src/Stylesheets/styles.css
@@ -359,10 +359,11 @@ li:hover .info {
 .pop-up {
   position: fixed;
   top: 1rem;
-  left: 5rem;
+  left: 18rem;
+  max-width: 1260px;
   /* bottom: 1rem; */
   right: 5rem;
-  background-color: rgb(25, 25, 25);
+  background-color: rgb(25, 25, 25) ;
   border-radius: 1rem;
   color: #fff;
   padding: 2rem;
@@ -374,6 +375,8 @@ h3 {
   text-align: center;
   margin-bottom: 3rem;
   margin-top: 1rem;
+  color:rgb(0, 217, 255);
+  text-transform: uppercase;
 }
 
 .hideBtn {
@@ -385,7 +388,7 @@ h3 {
   border-radius: 0.25rem;
   padding: 0.25rem 0.57rem;
   display: inline-block;
-  background-color: rgb(70, 70, 70);
+  background-color: rgb(240, 11, 11);
   color: white;
   font-weight: 700;
 }
